public/css/module.less
/*Main Pages*********************************************************/
#dependency-network {
    width: 100%;
    height: 100%;
    float: left;
}

.modal {
    display: none;
    position: fixed;
    left: 0;
    top: 96%;
    width: 100%;
    height: 100%;
    padding-left: 3em;
}

.notification-content {
    display: block;
    position: fixed;
    background-color: #fe6;
    border-top: 1px solid #c9c9c9;
    left: 0;
    top: 96%;
    width: 100%;
    height: 100%;
    padding-left: 3em;
    padding-top: 0.2em;
}

.fabs {
    position: fixed;
    bottom: 45px;
    right: 24px;
    height: 70px;
}

.zoom-fab {
    display: inline-block;
    width: 40px;
    height: 40px;
    padding-top: 5px;
    line-height: 40px;
    border-radius: 50%;
    background-color: @icinga-blue;
    vertical-align: middle;
    text-decoration: none;
    text-align: center;
    transition: 0.2s ease-out;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
    cursor: pointer; //   color: #FFF;
}

.zoom-fab:hover {
    background-color: #4db6ac;
    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
}

.fab-btn-large {
    width: 60px;
    height: 60px;
    line-height: 60px;
    padding-top: 10px;
}

.material-icons {
    color: white;
    font-size: 30px;
}

.fab-menu {
    position: absolute;
    right: 70px;
    left: auto;
    top: 50%;
    transform: translateY(-40%);
    height: 100%;
    width: 25em;
    list-style: none;
    text-align: right;
    margin: 0;
    padding-top: 0.6em;
}

.fab-menu li {
    display: inline-block;
    margin-right: 10px;
    background: transparent;
}

// .scale-transition {
//     transition: transform 0.3s cubic-bezier(0.53, 0.01, 0.36, 1.63) !important;
// }

.scale-transition.scale-out {
    transform: scale(0);
    transition: transform 0.2s !important;
}
// .scale-transition.scale-in {
//     transform: scale(1);
// }

#loadingBar {
    position: absolute;
    top: 0px;
    display: none; // left:10%;
    width: 100%;
    height: 100%;
    float: left;
    background-color: rgba(200, 200, 200, 0.8);
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -ms-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    opacity: 1;
}

#text {
    position: absolute;
    top: 0px;
    left: 530px;
    width: 30px;
    height: 50px;
    margin: auto auto auto auto;
    font-size: 22px;
    color: #000000;
}

div.outerBorder {
    position: relative;
    top: 400px;
    width: 600px;
    height: 44px;
    margin: auto auto auto auto;
    border: 8px solid rgba(0, 0, 0, 0.1);
    background: rgb(252, 252, 252);
    /* Old browsers */
    background: -moz-linear-gradient(top, rgba(252, 252, 252, 1) 0%, rgba(237, 237, 237, 1) 100%);
    /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(252, 252, 252, 1)), color-stop(100%, rgba(237, 237, 237, 1)));
    /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, rgba(252, 252, 252, 1) 0%, rgba(237, 237, 237, 1) 100%);
    /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, rgba(252, 252, 252, 1) 0%, rgba(237, 237, 237, 1) 100%);
    /* Opera 11.10+ */
    background: -ms-linear-gradient(top, rgba(252, 252, 252, 1) 0%, rgba(237, 237, 237, 1) 100%);
    /* IE10+ */
    background: linear-gradient(to bottom, rgba(252, 252, 252, 1) 0%, rgba(237, 237, 237, 1) 100%);
    /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#ededed', GradientType=0);
    /* IE6-9 */
    border-radius: 72px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
}

#bar {
    position: absolute;
    top: 5px;
    left: 0px;
    width: 20px;
    height: 20px;
    margin: auto auto auto auto;
    border-radius: 11px;
    border: 2px solid rgba(30, 30, 30, 0.05);
    background: rgb(0, 173, 246);
    /* Old browsers */
    box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.4);
}



/*Fulscreen HUD******************************************************/
#hud {
    height: 10%;
    display: none;
    background: #383838;
    .hud-box {
        display: block;
        float: left; // text-decoration: underline;
        margin: 0.5% 0.5% 0.5% 0.5%;
        font-size: large;
        text-align: center;
        color: white;
        height: 73%;
        width: 24%;
    }
    .hud-title-box {
        display: block;
        float: left; // text-decoration: underline;
        margin: 0.5% 0.5% 0.5% 0.5%;
        font-size: large;
        text-align: center;
        color: white;
        height: 73%;
        width: 24%;
    }
    #hud-title {
        h1 {
            font-weight: 600;
            font-size: 1.15vw;
            margin: 1.15em 0 0.333em;
            border: none;
        }
        background: grey;
        text-decoration: none;
    }
    #hud-down {
        h1 {
            font-weight: 600;
            font-size: 1.25vw;
            margin: 1em 0 0.333em;
            border: none;
        }
        background: red;
    }
    #hud-unreachable {
        h1 {
            font-weight: 600;
            font-size: 1.25vw;
            margin: 1em 0 0.333em;
            border: none;
        }
        background: purple;
    }
    #hud-up {
        h1 {
            font-weight: 600;
            font-size: 1.25vw;
            margin: 1em 0 0.333em;
            border: none;
        }
        background: green;
    }
}


/*Settings Page*****************************************************/
#module-settings {
    max-width: 20%;
    padding: 10px;
    float: left;
}

#network-preview {
    width: 80%;
    height: 100%;
    float: right;
    border: 1px solid lightgray;
}

#settings-form {
    h1 {
        border-bottom: 1px solid #eee;
        font-size: 1.333em;
        font-weight: 600;
        margin: 0.556em 0 1em 1em;
    }
    fieldset {
        border: 0px;
        legend {
            margin: 0em 0 0.5em 0.5em;
            font-size: 1em;
            border-bottom: 1px solid #c9c9c9;
            font-weight: bold;
            display: block;
            width: 100%; // padding-left: 1em;
            line-height: 2em;
            cursor: pointer;
        }
        dt {
            padding: 0.5em 0.5em;
        }
        dd {
            input {
                vertical-align: middle;
                /* margin-left: 27px; */
                bottom: 1px;
                left: -2px;
                position: relative; // width: 15px;
            }
            margin: 0;
            padding: 0.3em 0.5em;
        }
    }
}

/*Welcome Page***************************************************/
#welcome-page {
    padding: 10px;
    color: #666;
}

/*Kickstart Page********************************************************/
div.dependency-module-form {
    h1 {
        margin: 0.556em 0 1em 1em;
    }
    label {
        width: auto;
        font-weight: normal;
        font-size: inherit;
    }
    fieldset {
        min-width: 36em;
        border: 0px;
        legend {
            margin: 0em 0 0.5em 0.5em;
            font-size: 1em;
            border-bottom: 1px solid #c9c9c9;
            font-weight: bold;
            display: block;
            width: 100%; // padding-left: 1em;
            line-height: 2em;
        }
        dt {
            display: inline-block;
            vertical-align: top;
            min-width: 12em;
            min-height: 2.5em;
            width: 30%;
            padding: 1em 0.5em;
            margin: 0;
        }
        dd {
            select,
            input[type=text], input[type=password] {
                max-width: 36em;
                width: 100%;
                line-height: 2em;
                height: 2.4em;
                padding-left: 0.5em;
                border-style: solid;
                border-color: transparent;
                border-bottom-color: #eee; // border: 1px solid #ddd;
                cursor: pointer;
                background: none;
                border-width: 1px 1px 1px 3px;
                background-color: white;
            }
            display: inline-block;
            width: 63%;
            min-height: 2.5em;
            vertical-align: top;
            margin: 0;
            padding: 0.3em 0.5em;
        }
    }
}

